<resources>
    <string name="app_name">Pets World</string>

    <!-- Titulo Activity -->
    <string name="activity_detalle_sitios">Detalle del Sitio</string>

    <string name="navigation_drawer_open">Abrir panel de navegación</string>
    <string name="navigation_drawer_close">Cerrar panel de navegación</string>

    <!-- Menu Action -->
    <string name="action_settings">Configuracion</string>
    <string name="action_discard">Cerrar</string>

    <!-- Titulos Ciudades -->
    <string name="ciudad_preferences">Obtener Informacion Ciudades</string>
    <string name="armenia_preferences">Armenia</string>
    <string name="cartago_preferences">Cartago</string>
    <string name="pereira_preferences">Pereira</string>
    <string name="manizales_preferences">Manizales</string>

    <!-- Titulos de categorias -->
    <string name="parques_cat">Parques</string>
    <string name="comidas_cat">Comidas</string>
    <string name="veterinarias_cat">Veterinarias</string>
    <string name="tiendas_cat">Tiendas Pets</string>
    <string name="servicios_cat">Servicios</string>
    <string name="title_activity_maps">Ubicacion del Sitio</string>
    <string name="title_activity_nuevor_sitio">Nuevo Sitio</string>

    <!-- Ciudades array -->
    <string-array name="entradas_ciudades">
        <item>Armenia</item>
        <item>Cartago</item>
        <item>Manizales</item>
        <item>Pereira</item>
    </string-array>

    <!-- Diálogos -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_discard_msg">¿Descartar Cambios?</string>
    <string name="dialog_cancel">Cancelar</string>

    <string name="acerca_de_descripcion">Pets World es una aplicación que está enfocada en es dar a conocer a toda la comunidad del
        eje cafetero, los diferentes lugares, sitios o establecimiento donde puedan llevar a sus mascotas desde un parque hasta
        sitios más especializados como tiendas para mascotas, peluquerías, guarderías, veterinarias entre otros. </string>
    <string name="acerca_de_titulo_creditos">Creditos</string>
    <string name="acerca_de_creditos">Los iconos utilizados en esta aplicación fueron diseñados por www.freepik.com
        desde www.flaticon.com con licencia Creative Commons BY 3.0</string>


</resources>
