<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceCategory
        android:key="ciudad_pref"
        android:title="@string/ciudad_preferences">

        <SwitchPreferenceCompat
            android:key="armenia_pref"
            android:title="@string/armenia_preferences"
            android:defaultValue="true"/>

        <SwitchPreferenceCompat
            android:key="cartago_pref"
            android:title="@string/cartago_preferences"
            android:defaultValue="true"/>

        <SwitchPreferenceCompat
            android:key="manizales_pref"
            android:title="@string/manizales_preferences"
            android:defaultValue="true"/>

        <SwitchPreferenceCompat
            android:key="pereira_pref"
            android:title="@string/pereira_preferences"
            android:defaultValue="true"/>

    </PreferenceCategory>


</PreferenceScreen>